--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_kotlin_basic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,11 +15,12 @@
         android:layout_marginRight="16dp"
         android:text="@string/go_to_kotlin_basic"
         android:textColor="@color/white"
+        android:background="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_ui_element"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,9 +29,23 @@
         android:layout_marginRight="16dp"
         android:text="@string/ui_element"
         android:textColor="@color/white"
+        android:background="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_kotlin_basic" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_layouts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/layouts_btn"
+        android:textColor="@color/white"
+        android:background="@color/black"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_ui_element" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
