--- a/app/src/main/res/layout/activity_uielement.xml
+++ b/app/src/main/res/layout/activity_uielement.xml
@@ -99,7 +99,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/Rg_gender" />
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/chcx_cricket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -110,7 +110,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_hobbies" />
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/chcx_football"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
         app:layout_constraintStart_toEndOf="@id/chcx_cricket"
         app:layout_constraintTop_toBottomOf="@id/txt_hobbies" />
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/chcx_basketball"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
