--- a/app/src/main/res/layout/toast_layout.xml
+++ b/app/src/main/res/layout/toast_layout.xml
@@ -15,7 +15,7 @@
             android:layout_margin="16dp"
             android:orientation="horizontal">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
