--- a/app/src/main/res/layout/activity_intent.xml
+++ b/app/src/main/res/layout/activity_intent.xml
@@ -13,8 +13,8 @@
         android:layout_margin="25dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back_intent"
         android:layout_width="match_parent"
@@ -26,7 +26,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editxt_namme_intent" />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_implicit_intent"
         android:layout_width="match_parent"
