--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,7 +141,17 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_expandable_recyclerview" />
-
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_bottomnavigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@color/black"
+            android:text="@string/bottom_navigation"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_expandable_listview" />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_fragments"
             android:layout_width="match_parent"
@@ -152,8 +162,7 @@
             android:textColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_intent" />
-
+            app:layout_constraintTop_toBottomOf="@id/btn_bottomnavigation" />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_intent"
             android:layout_width="match_parent"
@@ -165,6 +174,5 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_fragments" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
