TE5-T679 MVVM Implemented

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -212,7 +212,7 @@
             android:textColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_webview" />
+            app:layout_constraintTop_toBottomOf="@id/btn_navgraph" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_mvp"
@@ -237,5 +237,17 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_mvp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_mvvm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@color/black"
+            android:text="@string/btn_txt_mvvm"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_mvc" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
