--- a/app/src/main/res/layout/recyclerview_item_layout.xml
+++ b/app/src/main/res/layout/recyclerview_item_layout.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<data>
+    <variable
+        name="dataModel"
+        type="com.example.android_demo_kotlin.databinding.ImageUrlList" />
+</data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,6 +16,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        setImageUrl="@{dataModel.imageurl}"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,10 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="@string/listview_name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:basePrice="@{dataModel.price}"
+        app:count="@{dataModel.count}"
         app:layout_constraintStart_toEndOf="@id/recylerview_img"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,3 +42,4 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
