--- a/app/src/main/res/layout/activity_mvvmactivity.xml
+++ b/app/src/main/res/layout/activity_mvvmactivity.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="mainviewModel"
+            type="com.example.android_demo_kotlin.mvvm.viewmodels.RecyclerActivityViewModel" />
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MVVM.MVVMActivity">
+    tools:context=".mvvm.MVVMActivity">
 
     <EditText android:id="@+id/searchBoxId"
         android:layout_width="match_parent"
@@ -22,6 +31,7 @@
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@+id/searchBoxId"
         app:layout_constraintStart_toStartOf="parent"
+        android:onClick="@{()->mainviewModel.makeApiCall(searchBoxId.getText().toString())}"
         />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_MVVM"
@@ -32,3 +42,4 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
